Adding jwt backend