@@ -3,16 +3,20 @@ package com.retail.apigateway.filter;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
 @Component
 public class RouteValidator {
 
-    public static final List<String> openApiEndpoints = List.of(
-            "/api/v1/auth/login",
-            "/api/v1/auth/register"
-    );
+    public static final List<String> openApiEndpoints =
+            Collections.unmodifiableList(
+                    new ArrayList<>(Arrays.asList("/api/v1/auth/login",
+            "/api/v1/auth/register")));
+
 
     public Predicate<ServerHttpRequest> isSecured =
             request -> openApiEndpoints
